[package]
name = "clawft-llm"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM provider abstraction for clawft (OpenAI-compatible + native providers)"
keywords = ["llm", "openai", "anthropic", "ai", "provider"]
categories = ["development-tools::testing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["native"]
native = ["reqwest/rustls-tls", "dep:tokio", "clawft-types/native"]
browser = ["clawft-types/browser"]

[dependencies]
# Always available
eml-core = { workspace = true }
async-trait = { workspace = true }
clawft-types = { workspace = true, default-features = false }
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP client -- always included, TLS backend selected by feature.
# On native: the `native` feature activates reqwest/rustls-tls.
# On browser/WASM: reqwest auto-detects wasm32 target and uses Fetch API.
reqwest = { workspace = true, default-features = false, features = ["json", "stream"] }

# Native only
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
temp-env = "0.3"
