[package]
name = "clawft-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plugin trait definitions for clawft"
keywords = ["plugin", "traits", "ai", "agent", "extensibility"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["native"]
native = ["dep:tokio-util"]
# Voice umbrella: pulls in every in-tree voice subfeature so callers
# can opt into the full STT + TTS scaffold with a single flag. Per
# WEFT-212 this MUST include voice-stt and voice-tts; previously the
# umbrella only enabled VAD + wake, which left voice-stt and
# voice-tts orphaned and meant `cargo build --features voice` built
# a silently-incomplete pipeline.
voice = ["voice-vad", "voice-wake", "voice-stt", "voice-tts", "dep:tokio"]
voice-stt = []
voice-tts = []
voice-vad = []
voice-wake = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true }
tracing = { workspace = true }
semver = "1"
reqwest = { workspace = true, default-features = false, features = ["json", "multipart"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
