[package]
name = "clawft-rpc"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RPC client and protocol types for communicating with the WeftOS kernel daemon"
keywords = ["rpc", "daemon", "ipc", "weftos"]
categories = ["network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt"] }
anyhow = { workspace = true }
dirs = { workspace = true }
# `blocking` for the version_check fire-and-forget thread (no tokio
# runtime in std::thread::spawn). Other features stay default-off to
# keep this crate's compile cost minimal — it is a foundation dep.
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
mockito = "1"
