[package]
name = "clawft-security"
version.workspace = true
# Publishable: reusable hardening / audit primitives.
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Security audit checks, hardening, and monitors for clawft"
keywords = ["security", "audit", "sandbox", "hardening"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
