[package]
name = "clawft-service-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WeftOS agent service — wraps clawft-core::agent::AgentLoop with per-conversation locking, cancellation, and a single dispatch entry point shaped for the agent.chat JSON-RPC handler."

[dependencies]
# Agent core — wraps `AgentLoop::handle_turn`. The native feature pulls
# in tokio + reqwest etc.; the daemon is the intended host.
clawft-core = { workspace = true, features = ["native"] }

# Platform trait — `AgentLoop<P: Platform>` carries this bound, and
# the blanket `impl AgentLoopHandle for AgentLoop<P>` repeats it.
clawft-platform = { workspace = true, features = ["native"] }

# Sibling LLM service — held in the broader plan for the runtime
# `Arc<RwLock<LlmClient>>` swap (Phase C2 risk #2). Pinned here so the
# `AgentService` layer is layered above the LLM client without weave
# having to round-trip through both.
clawft-service-llm = { workspace = true }

# Wire-format types live here; serde drives the JSON shape.
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime — tokio 'full' matches the daemon, which is the
# intended host. The `sync` feature is pulled in by `full`.
tokio = { workspace = true }

# Cancellation tokens for per-conv cancel.
tokio-util = { workspace = true }

# Per-conversation `DashMap<ConvId, ...>` for the lock + cancel maps.
dashmap = { workspace = true }

# Async-trait for the `AgentLoopHandle` test seam.
async-trait = { workspace = true }

# Structured logs — debug! traces around dispatch and shutdown.
tracing = { workspace = true }

# Error handling.
thiserror = { workspace = true }

# Inbound/outbound types — re-exported through `clawft-core`'s types
# dep but pulled in directly so the adapter functions stay legible.
clawft-types = { workspace = true, features = ["native"] }

# Timestamps for InboundMessage::timestamp. clawft-types uses chrono
# in its public type so we depend on it here too.
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

# The integration test in `tests/dispatch.rs` implements
# `AgentLoopHandle` for a stub, which uses `#[async_trait]`.
async-trait = { workspace = true }

# The stub returns `OutboundMessage` directly, so the test depends
# on the same shared types as the production code.
clawft-types = { workspace = true, features = ["native"] }
